--- a/cloud-doc/src/App.css
+++ b/cloud-doc/src/App.css
@@ -8,6 +8,25 @@
   cursor: pointer;
 }
 
+.start-page {
+  font-size: 30px;
+  height: 300px;
+  line-height: 300px;
+  color: #ccc;
+  text-align: center;
+}
+
+.left-panel {
+  height: 100vh;
+  position: relative;
+}
+
+.button-group {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
 .editor-toolbar {
   border-radius: 0 !important;
 }
